2006-02-16  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JComponent.java
	(rectCache): Made field non-static to avoid nasty interferences.
	(computeVisibleRect): Avoid creation of new Rectangles and double
	calculations on ints by using Swing.computeIntersection() instead
	of Rectangle2D.intersect().
	(repaint): Interect the dirty region with the visible rectangle
	of this component to avoid unnecessary painting.

2006-02-16  Gary Benson  <gbenson@redhat.com>

	* java/lang/Thread.java (stop): Add a missing access check.

2006-02-16  Robert Schuster  <robertschuster@fsfe.org>

	* javax/swing/text/JTextComponent.java:
	(replaceSelection): Added code to update the magic caret position.
	* javax/swing/text/DefaultEditorKit.java: Added code to update
	the magic caret position of the text component in all relevant
	movement actions, make use of the magic caret position in up
	and down movements and selections, simplified some actions
	(code-wise).

2006-02-15  Anthony Balkissoon  <abalkiss@redhat.com>

	* gnu/java/lang/CharData.java: Regenerated from 
	doc/unicode/UnicodeData-4.0.0.txt, doc/unicode/SpecialCasing-4.0.0.txt
	and scripts/unicode-muncher.pl.
	* java/lang/Character.java: 
	(PrivateUseCharacters): New private static class.
	(UnassignedCharacters): Likewise.
	(blocks): Changed from char[] to char[][] to reflect the changes in 
	gnu/java/lang/CharData.  There is now one char[] per Unicode code
	plane.
	(data): Likewise.
	(numValue): Likewise.
	(upper): Likewise.
	(lower): Likewise.
	(direction): Likewise.
	(readChar): Replaced this method with new method readCodePoint.
	(readCodePoint): New method.
	(isLowerCase(char)): Redirected to new isLowerCase(int).
	(isLowerCase(int)): New method.
	(isUpperCase(char)): Redirected to new isUpperCase(int).
	(isUpperCase(int)): New method.
	(isTitleCase(char)): Redirected to new isTitleCase(int).
	(isTitleCase(int)): New method.
	(isDigit(char)): Redirected to new isDigit(int).
	(isDigit(int)): New method.